--- a/html/include/cloudplugin_info.html
+++ b/html/include/cloudplugin_info.html
@@ -1,26 +1,39 @@
-<div class="js-close plugin-info plugin-container">
+<div class="js-close plugin-info plugin-container" mod-uri="{{escaped_uri}}">
     <div class="container box">
-        <span class="js-close alignright btn btn-mini btn-danger">Close</span>
         <div class="row-fluid clearfix">
+          <span class="js-close alignright btn btn-mini btn-danger">Close</span>
+          {{#price}}
+          <div class="description-price-container">
+            <div class="description-price">{{price}}</div>
+          </div>
+          {{/price}}
+          {{#licensed}}
+          <div class="description-price-container">
+            <div class="description-licensed"></div>
+          </div>
+          {{/licensed}}
+          {{#coming}}
+          <div class="description-price-container">
+            <div class="description-coming-soon"></div>
+          </div>
+          {{/coming}}
             <div class="span10 offset1 clearfix">
                 <figure class="screenshot">
+                  {{#demo}}
+                    <div class="demo-plugin demo-mask" title="This plugin is for demo purposes only and shall not be used live or in a studio"></div>
+                  {{/demo}}
+                  {{^stable}}
+                    <div class="beta">BETA</div>
+                  {{/stable}}
                     <img src="{{screenshot_href}}">
                 </figure>
 
                 <div class="plugin-description">
                     <header>
-                        <h1>{{name}}</h1>
+                      <h1>{{name}}</h1>
                         {{#installed}}
                         <a class="favorite-button {{favorite_class}}" title="Favorite Plugin"></a>
                         {{/installed}}
-                        {{#demo}}
-                        <div style="margin-bottom: 5px;">
-                            <span class="status demo"></span>
-                            <span style="display: block;">
-                                This plugin is for demo purposes only and shall not be used live or in a studio.
-                            </span>
-                        </div>
-                        {{/demo}}
                         <br/>
                         <p>
                             <b>URI:</b> {{uri}}<br/>
@@ -37,9 +50,18 @@
                             <span class="js-installed-version">
                                 Installed Version: <span class="bold">{{installed_version}}</span><br/>
                             </span>
-                            <button class="js-install btn btn-info btn-mini">Install</button>
-                            <button class="js-upgrade btn btn-info btn-mini">Upgrade</button>
-                            <button class="js-remove btn btn-danger btn-mini">Remove</button>
+                            <table><tr><td>
+                            <button class="js-install btn btn-info btn-mini">Install{{#trial}} Trial{{/trial}}</button>
+                            <button class="js-upgrade btn btn-info btn-mini">Upgrade{{#trial}} Trial{{/trial}}</button>
+                            <button class="js-remove btn btn-danger btn-mini">
+                              Remove{{#trial}} Trial{{/trial}}
+                            </button>
+                            </td>
+                            {{#shopify_id}}
+                            <td>&nbsp;</td>
+                            <td><div class="buy-button" id='product-component-{{shopify_id}}'></div></td>
+                            {{/shopify_id}}
+                            </tr></table>
                         </p>
                     </header>
                     <p>{{comment}}</p>
