--- a/html/css/less/cloud_plugins.less
+++ b/html/css/less/cloud_plugins.less
@@ -228,8 +228,8 @@
       .make-md-column(6);
       .make-lg-column(4);
       height: 120px;
-      margin-top: 10px;
-      margin-bottom: 60px;
+      border: 5px solid #000;
+      padding: 0 !important;
       background: rgba(255, 255, 255, 0.07);
       transition: all 0.33s;
       cursor: pointer;
@@ -242,11 +242,40 @@
           }
         }
         figure {
-          width: calc(~'100% - 20px');
-          height: 170px;
-          top: -25px;
-          left: 10px;
-          background-position: 0% 50%;
+          top: -5px;
+        }
+        div.demo-plugin {
+          opacity: 0;
+        }
+        span.price {
+          position: absolute;
+          top: 25px;
+          margin-left: 98px;
+          padding: 3px 0;
+          transform: rotate(0deg) scale(1.3);
+          width: 80px;
+        }
+        span.licensed {
+          position: absolute;
+          top: 25px;
+          margin-left: 98px;
+          padding: 3px 0;
+          transform: rotate(0deg) scale(1.3);
+          width: 113px;
+          text-align: center;
+        }
+        span.coming-soon {
+          position: absolute;
+          top: 25px;
+          margin-left: 98px;
+          padding: 3px 0;
+          transform: rotate(0deg) scale(1.3);
+          width: 113px;
+          text-align: center;
+        }
+        span.price-container {
+          margin-left: 170px;
+          width: 200px;
         }
       }
       figure {
@@ -254,12 +283,23 @@
         position: absolute;
         top: 10px;
         left: 20px;
-        width: 100px;
-        background-size: contain;
-        background-position: 50% 50%;
+        width: calc(~'100% - 20px');
+        background-size: auto;
+        background-position: 0% 50%;
         background-repeat: no-repeat;
         margin: 0;
         transition: all 0.33s linear;
+      }
+      span.price {
+        transition: all 0.33s linear;
+      }
+      span.price-container {
+        transition: all 0.33s linear;
+      }
+      .cloud-plugin-border {
+        border: 1px solid #333;
+        width: 100%;
+        height: 100%;
       }
       .description {
         .no_description {
@@ -270,10 +310,10 @@
         line-height: 1.5;
         overflow: hidden;
         position:absolute;
-        top: 0px;
-        right: 0px;
-        bottom: 0px;
-        left: 120px;
+        top: 1px;
+        right: 1px;
+        bottom: 1px;
+        left: 80px;
         background: rgba(33, 33, 33, 0.66);
         hr {
           transition: all 0.33s;
@@ -283,7 +323,7 @@
           position: absolute;
           top: 50%;
           left: 0;
-          width: 100%;
+          width: calc(~'100% - 5px');
         }
         .title {
           display: block;
@@ -381,6 +421,42 @@
 						border: 1px solid #444444;
 						text-align: center;
 						height: 290px;
+						.price-container {
+							position: absolute;
+							top: 0;
+							left: 0;
+							width: 90px;
+							height: 90px;
+							overflow: hidden;
+							color: #ffffff;
+						}
+						.price {
+							background-color: @brand-success;
+							border: 1px solid @brand-success;
+							&:before {
+								content: "€ ";
+							}
+							position: absolute;
+							top: 9px;
+							left: -30px;
+							padding: 3px 0;
+							transform: rotate(-45deg);
+							min-width: 108px;
+							text-align: center;
+						}
+						.licensed {
+							background-color: @brand-success;
+							border: 1px solid @brand-success;
+							&:before {
+								content: "PURCHASED";
+							}
+							position: absolute;
+							top: 16px;
+							left: -30px;
+							padding: 3px 27px;
+							font-size: 12px;
+							transform: rotate(-45deg);
+						}
 						h2 {
 							color: #c3c3c3;
 							text-align: center;
@@ -402,7 +478,7 @@
 						}
 						p {
 							color: #e0e0e0;
-							padding: 20px 20px 0 20px;
+							padding: 5px 5px 0 5px;
 							height: 59px;
 						}
 						button {
@@ -473,6 +549,56 @@
       content: "new version";
     }
   }
+  .price-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 90px;
+    height: 90px;
+    overflow: hidden;
+  }
+  .price {
+      background-color: @brand-success;
+      border: 1px solid @brand-success;
+      &:before {
+          content: "€ ";
+      }
+      position: absolute;
+      top: 9px;
+      left: -25px;
+      padding: 3px 0;
+      transform: rotate(-45deg);
+      min-width: 108px;
+      text-align: center;
+  }
+  .licensed {
+      background-color: @brand-success;
+      border: 1px solid @brand-success;
+      &:before {
+          content: "PURCHASED";
+      }
+      position: absolute;
+      top: 21px;
+      left: -30px;
+      padding: 3px 27px;
+      font-size: 14px;
+      transform: rotate(-45deg);
+  }
+  .coming-soon {
+	  background-color: @brand-success;
+	  border: 1px solid @brand-success;
+	  &:before {
+		  content: "TRIAL ONLY";
+	  }
+	  position: absolute;
+	  top: 26px;
+	  left: -35px;
+	  padding: 3px 27px;
+	  font-size: 12px;
+	  transform: rotate(-45deg);
+	  width: 135px;
+  }
+
   .status.buildEnvironment {
     border: 1px solid #FF2927;
     background-color: #FF2927;
@@ -500,12 +626,93 @@
       }
     }
   }
-  .status.demo {
-    border: 1px solid #235789;
-    background-color: #235789;
-    color: #FFFFFF;
+  .demo {
+    border: 1px solid #FF2927;
+    background-color: #FF2927;
     &:after {
       content: "demo";
     }
   }
+  .description-price-container {
+      position: absolute;
+      top: -17px;
+      left: -17px;
+      overflow: hidden;
+      height: 200px;
+      .description-price {
+          background-color: @brand-success;
+          border: 1px solid @brand-success;
+          &:before {
+              content: "€ ";
+          }
+          position: relative;
+          top: 34px;
+          left: -57px;
+          padding: 3px 0;
+          transform: rotate(-45deg);
+          min-width: 250px;
+          text-align: center;
+          font-size: 34px;
+          z-index: 11;
+      }
+      .description-licensed {
+          background-color: @brand-success;
+          border: 1px solid @brand-success;
+          &:before {
+              content: "PURCHASED";
+          }
+          position: relative;
+          top: 50px;
+          left: -60px;
+          padding: 3px 0;
+          transform: rotate(-45deg);
+          min-width: 280px;
+          text-align: center;
+          font-size: 34px;
+          z-index: 1;
+      }
+      .description-coming-soon {
+          background-color: @brand-success;
+          border: 1px solid @brand-success;
+          &:before {
+              content: "TRIAL ONLY";
+          }
+          position: relative;
+          top: 50px;
+          left: -70px;
+          padding: 3px 0;
+          transform: rotate(-45deg);
+          min-width: 280px;
+          text-align: center;
+          font-size: 26px;
+          z-index: 1;
+      }
+  }
+}
+
+.buy-button {
+    margin-top: -20px;
+    position: relative;
+    iframe {
+        position: absolute;
+        top: -17px;
+        left: 0;
+        min-width: 115px;
+        z-index: 1;
+    }
+}
+
+.shopify-fake-button {
+    position: absolute;
+    top: 3px;
+    left: 0;
+    z-index: 0;
+    background-color: #c224b0;
+    font-family: Arial;
+    font-size: 12px;
+    opacity: 0.25;
+    min-width: 115px;
+    min-height: 34px;
+    padding: 9px 15px;
+    text-align: center;
 }
