Show build env in plugin info instead of "beta"
Signed-off-by: falkTX <falktx@falktx.com>

--- a/html/include/cloudplugin.html
+++ b/html/include/cloudplugin.html
@@ -15,7 +15,7 @@
             {{#status}}
             <span class="status {{status}}"></span>
             {{/status}}
-            <span class="status buildEnvironment {{buildEnvironment}}"></span>
+            <span class="status buildEnvironment {{build_env}}"></span>
             {{#price}}
             <span class="price-container">
             <span class="price">{{price}}</span>
