--- a/html/include/cloudplugin_info.html
+++ b/html/include/cloudplugin_info.html
@@ -19,12 +19,12 @@
           {{/coming}}
             <div class="span10 offset1 clearfix">
                 <figure class="screenshot">
-                  {{#demo}}
+                    {{#demo}}
                     <div class="demo-plugin demo-mask" title="This plugin is for demo purposes only and shall not be used live or in a studio"></div>
-                  {{/demo}}
-                  {{^stable}}
-                    <div class="beta">BETA</div>
-                  {{/stable}}
+                    {{/demo}}
+                    {{#show_build_env}}
+                    <div class="beta">{{build_env_uppercase}}</div>
+                    {{/show_build_env}}
                     <img src="{{screenshot_href}}">
                 </figure>
 
