--- a/html/include/cloudplugin.html
+++ b/html/include/cloudplugin.html
@@ -15,10 +15,7 @@
             {{#status}}
             <span class="status {{status}}"></span>
             {{/status}}
-            <span class="status buildEnvironment {{buildEnvironment}}"></span>
-            {{^stable}}
-            <span class="status unstable"></span>
-            {{/stable}}
+            <span class="status buildEnvironment {{build_env}}"></span>
             {{#price}}
             <span class="price-container">
             <span class="price">{{price}}</span>
