Correct wording, s/sensibility/sensitivity/
Signed-off-by: falkTX <falktx@falktx.com>

--- a/html/include/addressing.html
+++ b/html/include/addressing.html
@@ -104,7 +104,7 @@
                           </select>
                       </div>
                   </div>
-                  <div class="sensibility form-group clearfix">
+                  <div class="sensitivity form-group clearfix">
                       <label>Sensitivity</label>
                       <div class="mod-controls mod-range">
                           <select class="form-control" name="steps"></select>
