--- a/html/include/bypass_addressing.html
+++ b/html/include/bypass_addressing.html
@@ -76,6 +76,15 @@
                           <input class="form-control" name="label" type="text"/>
                       </div>
                   </div>
+                  <div class="momentary-sw form-group clearfix">
+                      <label>Mode</label>
+                      <div class="mod-controls mod-range">
+                          <select class="form-control" name="momentary-sw-mode">
+                            <option value="0">Latching</option>
+                            <option value="1">Momentary</option>
+                          </select>
+                      </div>
+                  </div>
                   <div class="cv-op-mode form-group clearfix">
                       <label>Operational mode</label>
                       <div class="mod-controls mod-range">
