Add colors for 6-page duox; Properly center assignment window
Signed-off-by: falkTX <falktx@falktx.com>

--- a/html/css/less/addressings.less
+++ b/html/css/less/addressings.less
@@ -20,7 +20,7 @@
       }
 
       .main-form-container {
-        width: 441px;
+        width: 691px;
         padding-right: 3px;
 
         label {
@@ -71,6 +71,18 @@
 
           th:nth-child(3) {
             background-color: @cyan;
+          }
+
+          th:nth-child(4) {
+            background-color: @purple;
+          }
+
+          th:nth-child(5) {
+            background-color: @orange;
+          }
+
+          th:nth-child(6) {
+            background-color: @green;
           }
 
           th, td {
