--- a/html/css/less/variables.less
+++ b/html/css/less/variables.less
@@ -829,3 +829,6 @@
 @red: lighten(#ff0000, 20%);
 @yellow: lighten(#ffff00, 20%);
 @cyan: lighten(#00ffff, 20%);
+@purple: lighten(#ff00ff, 20%);
+@orange: lighten(#ffa000, 20%);
+@green: lighten(#00ff00, 20%);
