--- a/html/include/bypass_addressing.html
+++ b/html/include/bypass_addressing.html
@@ -1,4 +1,5 @@
 <div class="mod-pedal-settings-address">
+    <div class="mod-spacer"></div>
     <div class="mod-box">
         <h1 class="pull-left">{{label}} - <strong>{{name}}</strong></h1><span class="js-close close">&times;</span>
         <div class="clearfix"></div>
