Add dedicated on/off momentary modes
Signed-off-by: falkTX <falktx@falktx.com>

--- a/html/include/addressing.html
+++ b/html/include/addressing.html
@@ -101,7 +101,8 @@
                       <div class="mod-controls mod-range">
                           <select class="form-control" name="momentary-sw-mode">
                             <option value="0">Latching</option>
-                            <option value="1">Momentary</option>
+                            <option value="1">Momentary On</option>
+                            <option value="2">Momentary Off</option>
                           </select>
                       </div>
                   </div>
