--- a/html/include/cloudplugin.html
+++ b/html/include/cloudplugin.html
@@ -15,6 +15,9 @@
             {{#status}}
             <span class="status {{status}}"></span>
             {{/status}}
+            {{#unstable}}
+            <span class="status unstable"></span>
+            {{/unstable}}
             <span class="status buildEnvironment {{build_env}}"></span>
             {{#price}}
             <span class="price-container">
