Add `ios` class to document body when accessed from an iOS/iPadOS device
- Add function to document.ready that checks for iOS-specific navigator.platform/navigator.userAgent strings

- Add 980px min-width style to `body.ios`

--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -143,8 +143,12 @@ body {
 
 body {
   background: #111;
+  min-width: 1024px;
 
-  min-width: 980px;
+  // set document body to have 980px min-width on iOS devices to match default virtual viewport width
+  &.ios {
+    min-width: 980px;
+  }
 }
 
 * {
