Tweak colors, support 8 max now

--- a/html/css/less/addressings.less
+++ b/html/css/less/addressings.less
@@ -85,6 +85,14 @@
             background-color: @green;
           }
 
+          th:nth-child(7) {
+            background-color: @magenta;
+          }
+
+          th:nth-child(8) {
+            background-color: @blue;
+          }
+
           th, td {
             border: solid @gray-dark 1px;
             text-align: center;
