Fix settings icon not being centered

--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -468,8 +468,8 @@ hr.dotted {
 	  font-family: fontello !important;
 	  font-size: 28px;
 	  padding-top: 3px;
-	  padding-left: 5px;
-	  position: relative
+	  padding-left: 10px;
+	  position: relative;
 	  color: #fff;
 	  opacity: 0.66;
 	  cursor: pointer;
