Initial work for addressing subpages

--- a/html/include/addressing.html
+++ b/html/include/addressing.html
@@ -32,6 +32,7 @@
                   </div>
                   <div class="dynamic-field device-table form-group clearfix" style="display: none;">
                     <input type="hidden" name="hmi-page" type="number">
+                    <input type="hidden" name="hmi-subpage" type="number">
                     <input type="hidden" name="hmi-uri">
                   </div>
                   <span class="dynamic-field midi-learn-hint" style="display: none;">
