--- a/html/include/bypass_addressing.html
+++ b/html/include/bypass_addressing.html
@@ -31,6 +31,7 @@
                   </div>
                   <div class="dynamic-field device-table form-group clearfix" style="display: none;">
                     <input type="hidden" name="hmi-page" type="number">
+                    <input type="hidden" name="hmi-subpage" type="number">
                     <input type="hidden" name="hmi-uri">
                   </div>
                   <span class="dynamic-field midi-learn-hint" style="display: none;">To map this parameter to your MIDI controller, press "save" and move the desired control on your MIDI device.</span>
