Use version in menu-icons-sprite.png path, to override cache

--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -268,22 +268,8 @@ hr.dotted {
       width: 45px;
     }
   }
-  #mod-social {
-    background-image: url(../img/menu-icons-sprite.png);
-    background-position: 0 top;
-    background-repeat: no-repeat;
-    transition: all 0.33s;
-    &:hover {
-      background-color: #000;
-      background-position: 0 bottom;
-    }
-    &.selected {
-      background-color: #000;
-      background-position: 0 bottom;
-    }
-  }
   #mod-plugins {
-    background-image: url(../img/menu-icons-sprite.png);
+    background-image: url(../img/menu-icons-sprite.png?v=2);
     background-position: -45px top;
     background-repeat: no-repeat;
     transition: all 0.33s;
@@ -297,7 +283,7 @@ hr.dotted {
     }
   }
   #mod-cloud-plugins {
-    background-image: url(../img/menu-icons-sprite.png);
+    background-image: url(../img/menu-icons-sprite.png?v=2);
     background-position: -315px top;
     background-repeat: no-repeat;
     transition: all 0.33s;
@@ -311,7 +297,7 @@ hr.dotted {
     }
   }
   #mod-pedalboard {
-    background-image: url(../img/menu-icons-sprite.png);
+    background-image: url(../img/menu-icons-sprite.png?v=2);
     background-position: -90px top;
     background-repeat: no-repeat;
     transition: all 0.33s;
@@ -325,7 +311,7 @@ hr.dotted {
     }
   }
   #mod-bank {
-    background-image: url(../img/menu-icons-sprite.png);
+    background-image: url(../img/menu-icons-sprite.png?v=2);
     background-position: -135px top;
     background-repeat: no-repeat;
     transition: all 0.33s;
@@ -339,7 +325,7 @@ hr.dotted {
     }
   }
   #mod-file-manager {
-    background-image: url(../img/menu-icons-sprite.png);
+    background-image: url(../img/menu-icons-sprite.png?v=2);
     background-position: -180px top;
     background-repeat: no-repeat;
     transition: all 0.33s;
