Fix pedalboard snapshots text highlight, close rename with esc
Signed-off-by: falkTX <falktx@falktx.com>

--- a/html/css/dashboard.css
+++ b/html/css/dashboard.css
@@ -1335,3 +1335,13 @@ svg .connecting-light { fill: none; stroke: #6FF; stroke-width: 1; z-index: 1001
 .preset-manager .mod-list .mod-button.mod-button-edit {
     right: 113px;
 }
+
+/* = PEDALBOARD - SNAPSHOTS
+================================================ */
+#pedal-presets-list {
+    background-color: inherit;
+}
+#pedal-presets-list-input::selection {
+    background: #883996 !important;
+    color: white !important;
+}
