Fix missing led static/cycle option in preset addressing
Signed-off-by: falkTX <falktx@falktx.com>

--- a/html/include/bypass_addressing.html
+++ b/html/include/bypass_addressing.html
@@ -78,6 +78,15 @@
                           <input class="form-control" name="label" type="text"/>
                       </div>
                   </div>
+                  <div class="led-colour form-group clearfix">
+                      <label>LED Colour</label>
+                      <div class="mod-controls mod-range">
+                          <select class="form-control" name="led-color-mode">
+                            <option value="0">Static</option>
+                            <option value="1">Cycle</option>
+                          </select>
+                      </div>
+                  </div>
                   <div class="momentary-sw form-group clearfix">
                       <label>Mode</label>
                       <div class="mod-controls mod-range">
