Custom changes as needed for rtc
Signed-off-by: falkTX <falktx@falktx.com>

--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -631,6 +631,9 @@ header#pedalboard-actions,
             background-color: @brand-primary;
         }
     }
+    &.js-audio-stream {
+        display: none;
+    }
     &.js-cv-addressing {
         background-image: url(../img/icons/25/cv.png);
         &:hover, &.selected {
