--- a/html/css/dashboard.css
+++ b/html/css/dashboard.css
@@ -1353,3 +1353,9 @@ svg .connecting-light { fill: none; stroke: #6FF; stroke-width: 1; z-index: 1001
     background: #883996 !important;
     color: white !important;
 }
+
+@media only screen and (max-width: 1280px) {
+    #plugins-library .count {
+        display: none;
+    }
+}
