Use full size screenshot as thumbnail if devicePixelRatio >= 2

--- a/html/css/less/cloud_plugins.less
+++ b/html/css/less/cloud_plugins.less
@@ -284,7 +284,7 @@
         top: 10px;
         left: 20px;
         width: calc(~'100% - 20px');
-        background-size: auto;
+        background-size: auto 64px;
         background-position: 0% 50%;
         background-repeat: no-repeat;
         margin: 0;
