--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -952,6 +952,8 @@ header#pedalboard-actions {
         margin: 0 auto 3px;
         width: auto;
         pointer-events: none;
+        max-width: 256px;
+        max-height: 64px;
       }
       .plugins-wrapper .plugin .status {
         display: block;
