--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -942,6 +942,10 @@ header#pedalboard-actions {
         height: 67px;
         cursor: pointer !important;
         position: relative;
+        /* center thumbnail vertically */
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
         &:active {
           cursor: -webkit-grabbing !important;
           cursor: grabbing !important;
