--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -733,6 +733,24 @@ header#pedalboard-actions {
   }
 }
 
+#mod-user-profile-window {
+  top: 46px;
+  right: 0px;
+  bottom: initial;
+  left: initial;
+  background: rgba(17, 17, 17, 0.9);
+  padding: 10px 40px 10px 40px;
+  z-index: 999;
+}
+#mod-user-profile-window > div > * {
+  display: block;
+  padding: 5px;
+  text-align: center;
+}
+#mod-user-profile-window .btn {
+  height: 60px;
+}
+
 #plugins-library {
   bottom: 45px;
   height: 166px;
